--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <nav class="navbar nav-transparent navbar-expand-lg navbar-light">
       
-      <a class="navbar-brand" href="https://rafaelromero.github.io/"><img src="https://rafaelromero.github.io/images/logo.svg" height="40px"></a>
+      <a class="navbar-brand" href="https://rafaelromero.github.io/"><img src="https://rafaelromero.github.io/images/logo.png" height="40px"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
